--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
     }
 
     /* Header Container */
+
 .header-container {
+  position: relative; /* Let it scroll with the page */
+  left: 50%;
+  transform: translateX(-50%); /* Center the header horizontally */
   background-color: transparent; /* Remove background color */
   padding: 0; /* Remove any padding */
   box-shadow: none; /* No shadow */
@@ -74,8 +78,6 @@
   box-shadow: none;
   overflow-x: auto;
 }
-
-
 
     /* Navbar Links */
     .navbar a {
