--- a/index.html
+++ b/index.html
@@ -57,23 +57,23 @@
     /* Header Container */
 
 .header-container {
-  position: relative; /* Let it scroll with the page */
+  position: relative;
   left: 50%;
-  transform: translateX(-50%); /* Center the header horizontally */
-  background-color: transparent; /* Remove background color */
-  padding: 0; /* Remove any padding */
-  box-shadow: none; /* No shadow */
+  transform: translateX(-50%);
+  background-color: transparent;
+  padding: 0; /* Remove padding */
+  box-shadow: none;
   height: var(--header-height);
   transition: all 0.3s ease;
 }
 
 .navbar {
-  background-color: transparent; /* Ensure the navbar background is also transparent */
+  background-color: transparent;
   display: flex;
   flex-direction: row;
-  justify-content: center; /* Center the navbar items */
+  justify-content: center;
   padding: 0;
-  margin: 0;
+  margin: 0; /* Remove margin */
   width: 100%;
   box-shadow: none;
   overflow-x: auto;
