--- a/index.html
+++ b/index.html
@@ -57,27 +57,28 @@
     /* Header Container */
 
 .header-container {
-  position: relative;
+  position: relative; /* Let it scroll with the page */
   left: 50%;
-  transform: translateX(-50%);
-  background-color: transparent;
-  padding: 0; /* Remove padding */
-  box-shadow: none;
+  transform: translateX(-50%); /* Center the header horizontally */
+  background-color: transparent; /* Remove background color */
+  padding: 0; /* Remove any padding */
+  box-shadow: none; /* No shadow */
   height: var(--header-height);
   transition: all 0.3s ease;
 }
 
 .navbar {
-  background-color: transparent;
+  background-color: transparent; /* Ensure the navbar background is also transparent */
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: center; /* Center the navbar items */
   padding: 0;
-  margin: 0; /* Remove margin */
+  margin: 0;
   width: 100%;
   box-shadow: none;
   overflow-x: auto;
 }
+
 
     /* Navbar Links */
     .navbar a {
@@ -112,9 +113,11 @@
     }
 
     /* Content Layout */
-.content {
-  margin-top: 0; /* Remove any margin that might push content down */
-}
+    .content {
+      width: var(--content-width);
+      margin: var(--header-height) auto 0;
+      padding: clamp(1rem, 3vw, 2rem);
+    }
 
     /* Prevent overlap of content below header */
     body {
