--- a/index.html
+++ b/index.html
@@ -37,21 +37,8 @@
       color: var(--text-color);
       background-color: var(--background-color);
       overflow-x: hidden;
-      margin: 0; /* Remove body margin to avoid space */
-      padding: 0; /* Remove any padding */
-    }
-
-    /* Responsive Typography */
-    @media (max-width: 768px) {
-      html {
-        font-size: 14px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      html {
-        font-size: 12px;
-      }
+      margin: 0;
+      padding: 0;
     }
 
     /* Header Container */
@@ -59,22 +46,20 @@
       position: relative;
       background-color: transparent;
       padding: 0;
-      margin: 0; /* Remove any margin */
+      margin: 0;
       height: var(--header-height);
-      transition: all 0.3s ease;
-      text-align: center; /* Center header text */
+      text-align: center;
     }
 
     .navbar {
       background-color: transparent;
       display: flex;
       flex-direction: row;
-      justify-content: center; /* Center the navbar items */
+      justify-content: center;
       padding: 0;
       margin: 0;
       width: 100%;
       box-shadow: none;
-      overflow-x: auto;
     }
 
     /* Navbar Links */
@@ -86,7 +71,6 @@
       font-size: clamp(0.9rem, 2.5vw, 1.1rem);
       padding: 5px 10px;
       border-radius: 3px;
-      white-space: nowrap;
     }
 
     .navbar a:hover {
@@ -99,7 +83,7 @@
       display: block;
       width: min(350px, 80vw);
       height: auto;
-      margin: 0 auto; /* Remove margin between profile and navbar */
+      margin: 2rem auto; /* Added margin for spacing */
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s ease;
@@ -112,12 +96,17 @@
     /* Content Layout */
     .content {
       width: var(--content-width);
-      margin: 0 auto;
+      margin: 2rem auto; /* Added margin for spacing between sections */
       padding: clamp(1rem, 3vw, 2rem);
     }
 
     body {
-      margin-top: var(--header-height); /* Ensure there's no overlap */
+      margin-top: var(--header-height);
+    }
+
+    /* Revert Section Spacing */
+    .section {
+      margin: 3rem 0; /* Ensure spacing between sections */
     }
 
     @media (max-width: 768px) {
