--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     html {
       font-size: 16px;
       scroll-behavior: smooth;
-      scroll-padding-top: var(--header-height);
+      scroll-padding-top: var(--header-height); /* Avoid overlapping with fixed header */
     }
 
     body {
@@ -87,34 +87,28 @@
 
     /* Section Styling */
     section {
-      display: none; /* Hide all sections by default */
-      margin-bottom: 3rem;
+      margin-bottom: 3rem; /* Add space between sections */
     }
 
-    section.active {
-      display: block; /* Show only the active section */
+    h1, h2, h3 {
+      text-align: center;
+      color: var(--primary-color);
     }
 
-h1, h2, h3 {
-  /* Remove text-align: center for the headings */
-  color: var(--primary-color);
-}
+    h1 {
+      font-size: clamp(1.5rem, 4vw, 2rem);
+    }
 
-h1 {
-  font-size: clamp(1.5rem, 4vw, 2rem);
-}
+    h2 {
+      font-size: clamp(1.3rem, 3.5vw, 1.8rem);
+      border-bottom: 2px solid var(--secondary-color);
+      padding-bottom: 0.3em;
+    }
 
-h2 {
-  font-size: clamp(1.3rem, 3.5vw, 1.8rem);
-  border-bottom: 2px solid var(--secondary-color);
-  padding-bottom: 0.3em;
-}
-
-h3 {
-  font-size: clamp(1.1rem, 3vw, 1.4rem);
-  color: var(--secondary-color);
-}
-
+    h3 {
+      font-size: clamp(1.1rem, 3vw, 1.4rem);
+      color: var(--secondary-color);
+    }
 
     p {
       font-size: clamp(0.9rem, 2.5vw, 1rem);
