--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vikrant Kamble - Economics PhD Candidate</title>
+  <title>Vikrant V. Kamble - Economics PhD Candidate</title>
   <style>
     /* Root Variables with Breakpoints */
     :root {
@@ -91,7 +91,7 @@
     }
 
     h1, h2, h3 {
-      text-align: center;
+      text-align: left;
       color: var(--primary-color);
     }
 
@@ -205,7 +205,7 @@
 <body>
   <!-- Header Container -->
   <div class="header-container">
-    <div class="title-section">Vikrant Kamble</div>
+    <div class="title-section">Vikrant V. Kamble</div>
     <div class="subtitle-section">Economics PhD Candidate</div>
   </div>
 
@@ -221,7 +221,7 @@
     <!-- Home Section -->
     <section id="home" class="section">
       <img src="pic_new.jpg" alt="Profile photo of Vikrant Kamble" class="profile-photo">
-      <h1>Welcome! My name is Vikrant.</h1>
+      <p>Welcome! My name is Vikrant.</p>
       <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
       <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
       <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
