--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <section id="home" class="section">
       <img src="pic_new.jpg" alt="Profile photo of Vikrant Kamble" class="profile-photo">
       <p>Welcome! My name is Vikrant.</p>
-      <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
+      <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
       <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
       <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
       <div class="social-links">
@@ -247,23 +247,39 @@
     </section>
 
     <!-- Teaching Section -->
-    <section id="teaching" class="section">
-      <h2>Teaching</h2>
-      <h3>Instructor</h3>
-      <p>I will be teaching ECON101: Introduction to Microeconomics in Winter 2025.</p>
-      <h3>TA Courses</h3>
-      <p>Graduate Courses:</p>
-      <ul>
-        <li>ECON814 | Macroeconomics Theory II | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
-        <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a></li>
-      </ul>
-      <p>Undergraduate Courses:</p>
-      <ul>
-        <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></li>
-        <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
-        <li>ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/" target="_blank">Dr. Olga Gorbachev</a></li>
-      </ul>
-    </section>
+<section id="teaching" class="section">
+  <h2>Teaching Experience</h2>
+  
+  <h3>Instructor</h3>
+  <ul>
+    <li>ECON101: Introduction to Microeconomics</li>
+    <p class="indent">Winter 2025</p>
+  </ul>
+  
+  <h3>Graduate Courses (Teaching Assistant)</h3>
+  <ul>
+    <li>ECON814: Macroeconomics Theory II
+      <p class="indent">Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></p>
+    </li>
+    <li>ECON824: Econometrics of Cross-Section and Panel Data
+      <p class="indent">Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a></p>
+    </li>
+  </ul>
+  
+  <h3>Undergraduate Courses (Teaching Assistant)</h3>
+  <ul>
+    <li>ECON301: Intermediate Microeconomics with Calculus
+      <p class="indent">Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></p>
+    </li>
+    <li>ECON304: Quantitative Macroeconomic Theory
+      <p class="indent">Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></p>
+    </li>
+    <li>ECON422: Econometric Methods and Models
+      <p class="indent">Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/" target="_blank">Dr. Olga Gorbachev</a></p>
+    </li>
+  </ul>
+</section>
+
 
 <!-- Resources Section -->
     <section id="resources" class="section">
