--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
       margin: 0;
       width: 100%;
       box-shadow: none;
+      margin-bottom: 0; /* Remove bottom margin */
+      padding-bottom: 0; /* Remove bottom padding */
     }
 
     .navbar a {
