--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
       margin: 0;
       width: 100%;
       box-shadow: none;
-      margin-bottom: 0; /* Remove bottom margin */
-      padding-bottom: 0; /* Remove bottom padding */
+      position: relative; /* Ensures no additional spacing issues */
     }
 
     .navbar a {
