--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
       transform: scale(1.05);
     }
 
+    img {
+  margin: 0;
+  padding: 0;
+  display: block; /* Ensures no extra space below the image (fixes inline block behavior) */
+}
+
+
     /* Social Links */
     .social-links {
       text-align: center;
