--- a/index.html
+++ b/index.html
@@ -132,10 +132,11 @@
       transform: scale(1.05);
     }
 
-    img {
-  margin: 0;
-  padding: 0;
-  display: block; /* Ensures no extra space below the image (fixes inline block behavior) */
+/* Remove margin and padding from the image */
+img {
+  margin-top: 0;  /* Remove space above image */
+  padding-top: 0; /* Remove space above image */
+  display: block; /* Prevents extra space below the image */
 }
 
 
