--- a/index.html
+++ b/index.html
@@ -49,50 +49,33 @@ html, body {
 }
 
 /* Navbar Layout */
-.navbar {
-  background-color: transparent;
-  display: flex;
-  justify-content: center;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  box-shadow: none;
-  position: relative;
-  margin-bottom: 0 !important;  /* Ensure no space below navbar */
-  padding-bottom: 0 !important;
-}
+ /* Navbar Layout */
+    .navbar {
+      background-color: transparent;
+      display: flex;
+      justify-content: center;
+      padding: 0;
+      margin: 0;
+      width: 100%;
+      box-shadow: none;
+      position: relative; /* Ensures no additional spacing issues */
+    }
 
-/* Navbar Links */
-.navbar a {
-  color: #000000;
-  text-decoration: none;
-  margin: 0 10px;
-  font-weight: normal;
-  font-size: clamp(0.9rem, 2.5vw, 1.1rem);
-  padding: 5px 10px;
-  border-radius: 3px;
-  white-space: nowrap;
-}
+    .navbar a {
+      color: #000000;
+      text-decoration: none;
+      margin: 0 10px;
+      font-weight: normal;
+      font-size: clamp(0.9rem, 2.5vw, 1.1rem);
+      padding: 5px 10px;
+      border-radius: 3px;
+      white-space: nowrap;
+    }
 
-.navbar a:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-  transform: translateY(-1px);
-}
-
-/* Ensure no space above the image */
-img {
-  display: block; /* Prevents extra inline spacing */
-  margin: 0 !important;  /* Force removal of any space */
-  padding: 0 !important;
-  width: 100%; /* Optional: Adjust based on your design */
-}
-
-/* Ensure no extra space from parent containers */
-.container, .image-wrapper {
-  margin: 0;
-  padding: 0;
-}
-
+    .navbar a:hover {
+      background-color: rgba(255, 255, 255, 0.1);
+      transform: translateY(-1px);
+    }
 
 
     /* Header Container */
