--- a/index.html
+++ b/index.html
@@ -41,41 +41,41 @@
       padding: 0;
     }
 
-    /* Navbar Layout */
-/* Reset default browser styles */
-html, body {
+
+/* Navbar Layout */
+header {
   margin: 0;
   padding: 0;
 }
 
-/* Navbar Layout */
- /* Navbar Layout */
-    .navbar {
-      background-color: transparent;
-      display: flex;
-      justify-content: center;
-      padding: 0;
-      margin: 0;
-      width: 100%;
-      box-shadow: none;
-      position: relative; /* Ensures no additional spacing issues */
-    }
+.navbar {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  box-shadow: none;
+  position: relative;
+}
 
-    .navbar a {
-      color: #000000;
-      text-decoration: none;
-      margin: 0 10px;
-      font-weight: normal;
-      font-size: clamp(0.9rem, 2.5vw, 1.1rem);
-      padding: 5px 10px;
-      border-radius: 3px;
-      white-space: nowrap;
-    }
+.navbar a {
+  color: #000;
+  text-decoration: none;
+  margin: 0 10px;
+  font-weight: normal;
+  font-size: clamp(0.9rem, 2.5vw, 1.1rem);
+  padding: 5px 10px;
+  border-radius: 3px;
+  white-space: nowrap;
+}
 
-    .navbar a:hover {
-      background-color: rgba(255, 255, 255, 0.1);
-      transform: translateY(-1px);
-    }
+img {
+  display: block;
+  margin: 0 auto;
+  padding: 0;
+}
+
 
 
     /* Header Container */
