--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <a href="#resources">Resources</a>
   </nav>
 
-  <img class="profile-photo" src="path-to-your-image.jpg" alt="Profile Picture">
+<!--   <img class="profile-photo" src="path-to-your-image.jpg" alt="Profile Picture"> -->
   
 
   <!-- Content -->
